# HGGD

./: Dockerfile  Makefile  demo.py  demo.sh  demo_device_agnostic.py  pyproject.toml  setup.py
dataset/: __init__.py
hggd/: __init__.py
hggd/dataset/: evaluation.py  graspnet_utils.py
models/: __init__.py
